# webview_cpp

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
gui/: index.html  styles.css
include/: backend.hpp
src/: CMakeLists.txt  backend.cpp  main.cpp
webview/: CMakeLists.txt  webview.cpp
